# pmx

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  set-claude-profile.sh
.github/workflows/: CI.yml  Publish.yml
assets/manual/: README.md  pmx.1
completions/: _pmx
docs/: README.md  api.md  architecture.md  development.md  user-guide.md
pmx-claude/: README.md  package-lock.json  package.json
pmx-claude/src/: agent-runner.ts  cli.ts  index.ts
pmx-claude/src/commands/: init.ts  list-agents.ts  run-agent.ts  status.ts
pmx-claude/src/services/: agent-discovery.ts
pmx-claude/src/types/: agent-config.ts
src/: cli.rs  commands.rs  lib.rs  main.rs  storage.rs  utils.rs
src/commands/: claude_code.rs  extensions.rs  mcp.rs  openai_codex.rs  profile.rs  utils.rs
