[package]
name = "pmx"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for managing AI agent profiles across different platforms (Claude, Codex)"
homepage = "https://github.com/NishantJoshi00/pmx"
repository = "https://github.com/NishantJoshi00/pmx"
documentation = "https://docs.rs/pmx"
readme = "README.md"
keywords = ["cli", "ai", "claude", "profiles", "agent"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
authors = ["Nishant Joshi"]

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
arboard = "3.2.0"
dialoguer = "0.11.0"
tempfile = "3.20.0"
is-terminal = "0.4"
rmcp = { version = "0.2.0", features = ["server"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.20.0"
